--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,76 @@
     /* width: 35rem; */
 }
 /* End About area */
+
 /* tools */
+.single-brand>img{
+    height: 90px;
+    padding: 1.5rem;
+    filter: saturate(0%);
+}
+
+.site-main .brand-area{
+    padding: 1rem 20rem;
+    margin-top: 10rem;
+    margin-bottom: 4rem;
+}
+.site-main .brand-area .first-row .col-lg-4{
+    display: flex;
+    justify-content: center;
+}
+.site-main .brand-area .first-row .col-lg-4> .single-brand{
+    border: 1px solid var(--border-color);
+    text-align: center;
+    margin: .9rem .9rem;
+    width: 180px;
+    cursor: pointer;
+}
+.site-main .brand-area .first-row .col-lg-4> .single-brand:hover{
+    box-shadow: var(--box-shadow);
+    transform: scale(1.1);
+}
+.site-main .brand-area .first-row .col-lg-4> .single-brand:hover > img{
+    filter: saturate(100%);
+}
+.site-main .brand-area .experience-area{
+    padding-left: 1rem;
+}
+.site-main .brand-area .experience-area span{
+    display: block;
+}
+.site-main .brand-area .experience-area .years-area{
+    background: url(../img/client-info-bg.png) no-repeat 45px 20px,#e029290a;
+    margin: 10px;
+    box-shadow: 0px 0px 15px rgba(125, 124, 124, 0.224);
+    width: 400px;
+    padding: 2rem 0;
+    height: 18rem;
+    padding-left: 8rem;
+    position: relative;
+}
+.site-main .brand-area .experience-area .years-area .years{
+    /* font: larger bold var(--mont); */
+    font-size: 60px;
+    color: var(--primary-color2);
+    z-index: 2;
+}
+
+.site-main .brand-area .experience-area .years-area h2 > span{
+    transform: translateY(-20px);
+    font: normal 600 22px/30px var(--mont);
+}
+.site-main .brand-area .experience-area .call-area{
+    padding-left: 2rem;
+    display: flex;
+    transform: translateY(-40px);
+}
+.site-main .brand-area .experience-area .call-area> .call-now{
+    color: var(--primary-color);
+    font: var(--mont);
+}
+.site-main .brand-area .experience-area .call-area> .call-now > span{
+    color: var(--title-color);
+}
+
 /* tools */
 /* ----------------------------------------------------------------------------------------- */
