--- a/css/styles.css
+++ b/css/styles.css
@@ -344,28 +344,172 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
 /* projects area */
 
 
-/* footer */
-footer{
-    background: rgb(231, 240, 243);
-    margin-top : 100px;
+/* feedback area */
+.feedback{
+    text-align: center;
+    margin: 5rem auto;
+    width: 50vw;
 }
-footer> .wrap-up{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 5rem;
-}
-footer>.wrap-up>div{
-    width: 4rem;
-}
-footer > .wrap-up > .logos > a > img{
-    padding: .5rem;
-    height: 50px;
-    filter: saturate(0);
-}
-footer > .wrap-up > .logos > a > img:hover{
-    transform: scale(1.15);
-    filter: brightness(120%);
+.feedback >form> textarea{
+    
+    border-radius: 20px;
+    width: 40vw;
 }
 
+/* feedback */
+
+
+/* footer */
+.site-footer
+{
+    margin-top: 15rem;
+    padding-bottom: 5rem;
+  background-color:aliceblue;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color: var(--text-color);
+}
+.site-footer hr
+{
+  border-top-color:#1a1a1a;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color: var(--title-color);
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color: var(--primary-color);
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a>img{
+    filter: saturate(0);
+    padding: .5rem;
+    background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover>img
+{
+  filter: saturate(100%);
+  box-shadow: var(--box-shadow);
+
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
 /* footer */
 /* ----------------------------------------------------------------------------------------- */
