--- a/css/styles.css
+++ b/css/styles.css
@@ -345,16 +345,50 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
 
 
 /* feedback area */
-.feedback{
-    text-align: center;
-    margin: 5rem auto;
+.feedback {
     width: 50vw;
-}
-.feedback >form> textarea{
-    
-    border-radius: 20px;
-    width: 40vw;
-}
+    border-radius:20px;
+    padding: 5% 0 0;
+    margin: auto;
+  }
+  .form {
+    position: relative;
+    z-index: 1;
+    max-width: 70%;
+    margin: 0 auto 100px;
+    padding: 45px;
+    text-align: center;
+  }
+  .form textarea {
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    border-radius:10px;
+    margin: 0 0 15px;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  .form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: var(--gradient-color);
+    width: 40%;
+    border: 0;
+    border-radius:30px;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+  }
+  .form button:hover,.form button:active,.form button:focus {
+    background: var(--primary-color)
+  }
+  
+  
 
 /* feedback */
 
@@ -362,7 +396,7 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
 /* footer */
 .site-footer
 {
-    margin-top: 15rem;
+    margin-top: 5rem;
     padding-bottom: 5rem;
   background-color:aliceblue;
   padding:45px 0 20px;
