slight styling change

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@
 
 /* -------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
+
 /* banner area */
 
 .site-main .site-banner{
@@ -168,6 +169,9 @@
 }
 
 /* tools */
+/* ----------------------------------------------------------------------------------------------- */
+
+/* -------------------------------------------------------------------------------------------------------- */
 /* Services Area */ 
 
 .site-main .services-area{
@@ -218,6 +222,7 @@
   height:350px;
   margin:25px;
   background-color:var(--primary-color);
+  border-radius: 12px;
   display:inline-block;
   background-size:cover;
   position:relative;
@@ -519,6 +524,7 @@ Component
 }
 
 /* sessions area......................................... */
+
 /* feedback area */
 .feedback {
     width: 50vw;
