--- a/css/styles.css
+++ b/css/styles.css
@@ -5,77 +5,24 @@
 @import "compass/css3";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
-/* ----------------------------------------------------------------------------------------------- */
-/* navigation */
-.navbar-brand{
-    padding-bottom : 10px;
-}
-.header_area .main-menu .navbar .navbar-brand{
-    padding: 0 2rem 0 5rem;
-}
-.header_area .main-menu .navbar{
-    padding: 1rem 15rem;
-    background-color: white;
-    box-shadow: 2px 2px 10px 5px rgba(246, 246, 252, 0.5)
-}
-.header_area .main-menu .nav-item .nav-link{
-    font: normal 500 15px/2px var(--mont);
-    text-transform: uppercase;
-    font-weight: 500;
-    padding: 1.7rem;
-    color: var(--title-color);
-}
-.header_area .main-menu .navbar-nav .active a{
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-}
-.header_area .main-menu .navbar-nav a:hover{
-    background: var(--gradient-color);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+
+*{
+  font-family: var(--mont);
 }
 
-/* E navigation  E*/
+/* --------------------------------------------------------------- */
+.header_area .main-menu .navbar{
+    box-shadow: 2px 2px 10px 5px rgba(246, 246, 252, 0.5);
+}
+.header_area .main-menu .navbar-nav .active a, .header_area .main-menu .navbar-nav a:hover{
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
 
 /* -------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
-
-/* banner area */
-
-.site-main .site-banner{
-    background: url(./img/girl-with-laptop-chair-freelance-studying-concept-illustration-vector_199064-194.avif) no-repeat 0% 50%;
-}
-.site-main .site-banner .site-title h3{
-    padding-top: 35%;
-    font-weight: 500;
-}
-.site-main .site-banner .site-title h3::after{
-    content: " ";
-    height: 2px;
-    width: 18vw;
-    background: black;
-    display: inline-block;
-    margin-left: 5%;
-    transform: translateY(-10px);
-}
-.site-main .site-banner .site-title h1{
-    font-size: 5rem;
-    font-weight: 600;
-}
-.site-main .site-banner .site-title h4{
-    font-size: 1.5rem;
-    font-weight: 100;
-}
-.site-main .site-banner .banner-image > img{
-    padding: 3rem 0;
-    width: 90rem;
-}
-.title-text{
-    font: normal bold 50px/72px var(--mont);
-}
 /* banner area */
 
 .libutton {
@@ -90,100 +37,47 @@
   width: 200px;
   height: 42px;
   border-radius: 36px;
-   background-color: #0A66C2;
   background-color: var(--primary-color);
   font-family: "SF Pro Text", Helvetica, sans-serif;
 }
 
 /* ----------------------------------------------------------------------------------------------------- */
-
-/* Start About area */
-.site-main .about-area{
-    padding: 0rem 8rem;
-}
-.site-main .about-area .about-title h2 > span{
-    display: block;
-    font: normal bold 49px/ 60px var(--mont);
-    letter-spacing: 10px;
-}
-.site-main .about-area .about-title .paragraph > p{
-    padding: .4rem 0rem;
-    text-align: justify;
-}
-.site-main .about-area .about-image > img{
-    padding: 1rem ;
-    width: 40rem;
-}
-/* End About area */
-
 /* tools */
-.single-brand>img{
-    height: 90px;
-    padding: 1.2rem;
+.site-main .tools-area .first-row .single-brand{
+  max-width: 60px;
+  border-color: #1a1a1a;
+  margin: 0.2rem;
+  padding: 0.2rem;
 }
+/* ---------------------------------------------------------- */
 
-.site-main .brand-area{
-    padding: 1rem 15rem;
-    margin-top: 10rem;
-    margin-bottom: 4rem;
-}
-.site-main .brand-area .first-row .col-lg-3{
-    display: flex;
-    justify-content: center;
-}
-.site-main .brand-area .first-row .col-lg-3> .single-brand{
-    border: 1px solid rgba(250, 235, 215, 0.231);
-    border-radius: 10px;
-    text-align: center;
-    margin: .9rem .9rem;
-    width: 200px;
-    cursor: pointer;
-}
-.site-main .brand-area .first-row .col-lg-3> .single-brand:hover{
-    box-shadow: var(--box-shadow);
-    transform: scale(1.02);
-}
-.site-main .brand-area .first-row .col-lg-3> .single-brand:hover > img{
-    filter: saturate(150%);
-}
-.site-main .brand-area .experience-area{
-    padding-left: 1rem;
-}
-.site-main .brand-area .experience-area span{
+
+.site-main .tools-area .experience-area span{
     display: block;
 }
-.site-main .brand-area .experience-area .years-area{
+.site-main .tools-area .experience-area .years-area{
     background: url(../img/client-info-bg.png) no-repeat 45px 20px,#e029290a;
-    border-radius: 20px;
-    margin: 10px;
-    box-shadow: 0px 0px 35px rgba(125, 124, 124, 0.224);
-    width: 400px;
-    padding: 2rem 0;
+    box-shadow: 0px 0px 35px rgba(182, 164, 176, 0.224);
     height: 18rem;
     padding-left: 8rem;
     position: relative;
 }
-.site-main .brand-area .experience-area .years-area .years{
-    /* font: larger bold var(--mont); */
-    font-size: 60px;
+.site-main .tools-area .experience-area .years-area .years{
     color: var(--primary-color2);
-    z-index: 2;
 }
 
-.site-main .brand-area .experience-area .years-area h2 > span{
-    transform: translateY(-20px);
-    font: normal 600 22px/30px var(--mont);
+.site-main .tools-area .experience-area .years-area h2 > span{
+    transform: translateY(-30px);
 }
-.site-main .brand-area .experience-area .call-area{
-    padding-left: 2rem;
+.site-main .tools-area .experience-area .call-area{
     display: flex;
     transform: translateY(-40px);
 }
-.site-main .brand-area .experience-area .call-area> .call-now{
+.site-main .tools-area .experience-area .call-area> .call-now{
     color: var(--primary-color);
     font: var(--mont);
 }
-.site-main .brand-area .experience-area .call-area> .call-now > span{
+.site-main .tools-area .experience-area .call-area> .call-now > span{
     color: var(--title-color);
 }
 
