--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@
   /* border-radius: 20px; */
   background: rgb(242, 246, 254);
   margin: 0 0 1rem;
-  transition: box-shadow 1s ease,transform .5s ease;
+  transition: box-shadow .5s ease,transform .5s ease;
   margin-top: 0.5rem;
 }
 
