--- a/css/styles.css
+++ b/css/styles.css
@@ -136,8 +136,6 @@
 /* -------------------------------- 
 Component 
 -------------------------------- */
-.session h1{
-}
 .banner {
   margin-top: 50px;
   display: block;
@@ -328,13 +326,9 @@ Component
   border-top-color:#1a1a1a;
   opacity:0.5
 }
-.site-footer hr.small
-{
-  margin:20px 0
-}
 .site-footer h6
 {
-  color: var(--title-color);
+  color: var(--primary-color);
   font-size:16px;
   text-transform:uppercase;
   margin-top:5px;
@@ -419,7 +413,7 @@ Component
 }
 .social-icons li.title
 {
-  margin-right:15px;
+  /* margin-right:15px; */
   text-transform:uppercase;
   color:#96a2b2;
   font-weight:700;
